--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <meta charset="utf-8" />
     <meta
       name="viewport"
-      content="width=device-width, initial-scale=1,
-  maximum-scale=5"
+      content="width=device-width, initial-scale=1, maximum-scale=5"
     />
 
     <link rel="icon" href="devchallenges.png" />
@@ -16,80 +15,71 @@
       href="https://devchallenges.io/"
     />
 
-    <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap"
-      rel="stylesheet"
-    />
-
     <title>Devchallenges</title>
-
-    <style>
-      body {
-        font-family: "Poppins", sans-serif;
-      }
-
-      ul {
-        padding-left: 24px;
-      }
-
-      li {
-        margin-bottom: 8px;
-      }
-
-      .welcome {
-        max-width: 800px;
-        margin: 0 auto;
-      }
-
-      .welcome-text {
-        margin-top: 30vh;
-        font-weight: 500;
-      }
-
-      .welcome-text p {
-        font-size: 1rem;
-        font-weight: 400;
-      }
-
-      .welcome-text h1 {
-        font-size: 1.5rem;
-      }
-
-      .welcome-text a {
-        color: #f7542e;
-      }
-    </style>
   </head>
+  
   <body>
-    <div class="welcome">
-      <div class="welcome-text">
-        <h1>
-          Welcome to
-          <a href="https://devchallenges.io/" target="_blank"
-            >devchallenges.io</a
-          >
-        </h1>
+    <div class="header">
+      <h1 class="header__title">The creative crew</h1>
+      <div>
+        <h2 class="header__subtitle">WHO WE ARE?</h2>
+        <p class="header__text">We are team of creatively diverse. driven. innovative individuals working in various locations from the world.</p>
+      </div>
+    </div>
 
-        <p>
-          If you have any questions, don't hesitate to ask on Discord. Here are
-          7 general steps to complete the challenge:
-        </p>
+    <div class="content">
+      <div class="content__member">
+        <div>
+          <img class="content__member-photo" src="photo1.png">
+          <p class="content__member-name">Bill Mahoney</p>
+        </div>
+        <p class="content__member-rol">PRODUCT OWNER</p>
       </div>
 
-      <ul>
-        <li><b>Step 1:</b> Create a new repository on github</li>
-        <li><b>Step 2:</b> Copy resources, README.md to your repository</li>
-        <li>
-          <b>Step 3:</b> Login to Figma to checkout font, color, spacing,..
-        </li>
-        <li><b>Step 4:</b> Complete all user stories</li>
-        <li><b>Step 5:</b> Update README.md</li>
-        <li><b>Step 6:</b> Deploy your app and submit your solution</li>
-        <li>
-          <b>Step 7:</b> Share your solution on Discord, Twitter and other
-          platforms to ask for feedback
-        </li>
-      </ul>
+      <div class="content__member">
+        <div>
+          <img class="content__member-photo" src="photo2.png">
+          <p class="content__member-name">Saba Cabrera</p>
+        </div>
+        <p class="content__member-rol">ART DIRECTOR</p>
+      </div>
+
+      <div class="content__member">
+        <div>
+          <img class="content__member-photo" src="photo3.png">
+          <p class="content__member-name">Shae Le</p>
+        </div>
+        <p class="content__member-rol">TECH LEAD</p>
+      </div>
+
+      <div class="content__member">
+        <div>
+          <img class="content__member-photo" src="photo4.png">
+          <p class="content__member-name">Skylah Lu</p>
+        </div>
+        <p class="content__member-rol">UX DESIGNER</p>
+      </div>
+
+      <div class="content__member">
+        <div>
+          <img class="content__member-photo" src="photo5.png">
+          <p class="content__member-name">Griff Richards</p>
+        </div>
+        <p class="content__member-rol">DEVELOPER</p>
+      </div>
+
+      <div class="content__member">
+        <div>
+          <img class="content__member-photo" src="photo6.png">
+          <p class="content__member-name">Stan John</p>
+        </div>
+        <p class="content__member-rol">DEVELOPER</p>
+      </div>
     </div>
+
+    <footer class="footer">
+      <p class="footer__text">created by Federico Quarin - <a href="https://devChallenges.io">devChallenges.io</a></p>
+    </footer>
+    
   </body>
 </html>
