--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
       content="width=device-width, initial-scale=1, maximum-scale=5"
     />
 
+    <link rel="stylesheet" type="text/css" href="styles/normalize.css">
+    <link rel="stylesheet" type="text/css" href="styles/main.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700&family=PT+Serif:wght@400;700&family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+
+
     <link rel="icon" href="devchallenges.png" />
 
     <link
@@ -17,13 +25,15 @@
 
     <title>Devchallenges</title>
   </head>
-  
+
   <body>
     <div class="header">
-      <h1 class="header__title">The creative crew</h1>
-      <div>
-        <h2 class="header__subtitle">WHO WE ARE?</h2>
-        <p class="header__text">We are team of creatively diverse. driven. innovative individuals working in various locations from the world.</p>
+      <div class="header__inner-div">
+        <h1 class="header__title">The creative crew</h1>
+        <div>
+          <h2 class="header__subtitle">WHO WE ARE?</h2>
+          <p class="header__text">We are team of creatively diverse. driven. innovative individuals working in various locations from the world.</p>
+        </div>
       </div>
     </div>
 
@@ -78,7 +88,7 @@
     </div>
 
     <footer class="footer">
-      <p class="footer__text">created by Federico Quarin - <a href="https://devChallenges.io">devChallenges.io</a></p>
+      <p class="footer__text">created by <n>Federico Quarin</n> - <a href="https://devChallenges.io">devChallenges.io</a></p>
     </footer>
     
   </body>
