Change layout from grid to flex

--- a/index.html
+++ b/index.html
@@ -39,51 +39,63 @@
 
     <div class="content">
       <div class="content__member">
-        <div>
-          <img class="content__member-photo" src="photo1.png">
-          <p class="content__member-name">Bill Mahoney</p>
+        <div class="content__member-inner-div">
+          <div>
+            <img class="content__member-photo" src="photo1.png">
+            <p class="content__member-name">Bill Mahoney</p>
+          </div>
+          <p class="content__member-rol">PRODUCT OWNER</p>
         </div>
-        <p class="content__member-rol">PRODUCT OWNER</p>
       </div>
 
       <div class="content__member">
-        <div>
-          <img class="content__member-photo" src="photo2.png">
-          <p class="content__member-name">Saba Cabrera</p>
+        <div class="content__member-inner-div">
+          <div>
+            <img class="content__member-photo" src="photo2.png">
+            <p class="content__member-name">Saba Cabrera</p>
+          </div>
+          <p class="content__member-rol">ART DIRECTOR</p>
         </div>
-        <p class="content__member-rol">ART DIRECTOR</p>
       </div>
 
       <div class="content__member">
-        <div>
-          <img class="content__member-photo" src="photo3.png">
-          <p class="content__member-name">Shae Le</p>
+        <div class="content__member-inner-div">
+          <div>
+            <img class="content__member-photo" src="photo3.png">
+            <p class="content__member-name">Shae Le</p>
+          </div>
+          <p class="content__member-rol">TECH LEAD</p>
         </div>
-        <p class="content__member-rol">TECH LEAD</p>
       </div>
 
       <div class="content__member">
-        <div>
-          <img class="content__member-photo" src="photo4.png">
-          <p class="content__member-name">Skylah Lu</p>
+        <div class="content__member-inner-div">
+          <div>
+            <img class="content__member-photo" src="photo4.png">
+            <p class="content__member-name">Skylah Lu</p>
+          </div>
+          <p class="content__member-rol">UX DESIGNER</p>
         </div>
-        <p class="content__member-rol">UX DESIGNER</p>
       </div>
 
       <div class="content__member">
-        <div>
-          <img class="content__member-photo" src="photo5.png">
-          <p class="content__member-name">Griff Richards</p>
+        <div class="content__member-inner-div">
+          <div>
+            <img class="content__member-photo" src="photo5.png">
+            <p class="content__member-name">Griff Richards</p>
+          </div>
+          <p class="content__member-rol">DEVELOPER</p>
         </div>
-        <p class="content__member-rol">DEVELOPER</p>
       </div>
 
       <div class="content__member">
-        <div>
-          <img class="content__member-photo" src="photo6.png">
-          <p class="content__member-name">Stan John</p>
+        <div class="content__member-inner-div">
+          <div>
+            <img class="content__member-photo" src="photo6.png">
+            <p class="content__member-name">Stan John</p>
+          </div>
+          <p class="content__member-rol">DEVELOPER</p>
         </div>
-        <p class="content__member-rol">DEVELOPER</p>
       </div>
     </div>
 
