--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       href="https://devchallenges.io/"
     />
 
-    <title>Devchallenges</title>
+    <title>My team page</title>
   </head>
 
   <body>
