--- a/public/index.html
+++ b/public/index.html
@@ -15,13 +15,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700&family=PT+Serif:wght@400;700&family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 
 
-    <link rel="icon" href="devchallenges.png" />
+    <link rel="icon" href="devchallenges.png" >
 
-    <link
+    <!--link
       rel="shortcut icon"
       type="image/x-icon"
       href="https://devchallenges.io/"
-    />
+    /-->
 
     <title>My team page</title>
   </head>
